# Fine-I-ll-Do-It

./: .gitignore  ProjectDirectives.md  README.md  index.html  package-lock.json  package.json
.cargo/: config.toml
md/: MainPlan.md  SQLiteSchema.md  TauriPlan.md
refference/category_management/: code.html
refference/category_mapping/: code.html
refference/initial_data_upload/: code.html
refference/modern_analysis_dashboard/: code.html
refference/vault_ledger/: DESIGN.md
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: app-data.ts  database.ts  excel-adapter.ts  import-service.ts  transaction-repository.ts
src/parsers/: README.md  hana-parser.ts  hyundai-parser.ts  index.ts  lotte-parser.ts  shinhan-parser.ts  utils.ts
