[package]
name = "card_pattern"
version = "0.1.0"
description = "Local card spending analyzer"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-sql = { version = "2.0.0", features = ["sqlite"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
